k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: beatup-backend
  namespace: beatup
  labels:
    app: beatup-backend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: beatup-backend
